--- a/app/src/main/res/layout/activity_new_content.xml
+++ b/app/src/main/res/layout/activity_new_content.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:padding="10dp"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="10dp">
     <EditText
         android:id="@+id/et_title"
-        android:padding="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@null"
         android:hint="输入标题"
-        android:textSize="20sp"
         android:lines="1"
         android:maxLength="15"
-        android:background="@null"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:padding="5dp"
+        android:textSize="20sp" />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -20,34 +21,33 @@
     <LinearLayout
         android:id="@+id/ll_content"
         android:layout_width="match_parent"
-        android:orientation="vertical"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
         <EditText
             android:id="@+id/et_content"
-            android:gravity="left|top"
-            android:padding="5dp"
-            android:hint="输入内容"
-            android:textSize="18sp"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:background="@null"
-            android:maxLines="13"
-            android:layout_height="wrap_content"/>
+            android:gravity="left|top"
+            android:hint="输入内容"
+            android:padding="5dp"
+            android:textSize="18sp" />
         <TextView
             android:id="@+id/tv_update"
-            android:layout_marginTop="15dp"
-            android:textSize="10sp"
-            android:layout_marginRight="16dp"
-            android:gravity="right"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="15dp"
+            android:gravity="right"
+            android:textSize="10sp" />
     </LinearLayout>
 
     <Button
         android:id="@+id/btn_save"
-        android:background="@drawable/button_border"
-        android:text="保存"
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_border"
+        android:gravity="center"
+        android:text="保存" />
 </LinearLayout>
